src/objects/ServiceRequest__c.object
<CustomObject>
    <description>Holds the different services that a request can include, such as: Hotel Stays, Housing requests, Furniture requests, Fair Rental Value, etc.</description>
    <fields>
        <fullName>Add_On__c</fullName>
        <label>Add-On</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Adjuster_to_Pay__c</fullName>
        <label>Bill Adjuster for</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deposits and Fees</fullName>
                </value>
                <value>
                    <fullName>Deposits</fullName>
                </value>
                <value>
                    <fullName>Fees</fullName>
                </value>
                <value>
                    <fullName>Will not Pay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Adult_Description__c</fullName>
        <formula>Opportunity__r.Adult_Description__c</formula>
        <label>Adult Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ages_of_Children__c</fullName>
        <formula>Opportunity__r.Children_s_Ages__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ages of Children</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Already_in_Hotel__c</fullName>
        <formula>IF (Opportunity__r.Already_in_Hotel__c = TRUE, &apos;Yes&apos;, &apos;No&apos;)</formula>
        <label>Already in Hotel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area_Specialist_Assigned_Date__c</fullName>
        <formula>Opportunity__r.Area_Specialist_Assigned__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Residence Specialist Assigned Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Area_Specialist_Email__c</fullName>
        <label>Property Specialist Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Area_Specialist__c</fullName>
        <formula>Opportunity__r.Area_Specialist__r.FirstName &amp; &quot; &quot; &amp; Opportunity__r.Area_Specialist__r.LastName</formula>
        <label>Residence Specialist</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Average_Rent__c</fullName>
        <description>Used for FRV CongaMerge Doc.</description>
        <label>Average Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bill_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill To</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Service Requests</relationshipLabel>
        <relationshipName>R00NR0000000VZqTMAW</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRS_Hotel_Confirmation_Created_Date__c</fullName>
        <label>CRS Hotel Confirmation Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Children_s_Ages__c</fullName>
        <formula>Opportunity__r.Children_s_Ages__c</formula>
        <label>Children&apos;s Ages</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_Alerts__c</fullName>
        <formula>Opportunity__r.Alerts__c</formula>
        <label>Alerts</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim__c</fullName>
        <formula>Opportunity__r.Claim__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Claim #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claims_Document_Email__c</fullName>
        <formula>Opportunity__r.Policyholder__r.Claims_Document_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Claims Document Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Type__c</fullName>
        <label>Class Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cleaning_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cleaning Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cleanout_Accessible__c</fullName>
        <label>Cleanout Accessible</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cleanout_Feet_from_Trailer__c</fullName>
        <label>Sewer Cleanout Feet from Trailer</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Connect_Electric_to_Trailer_Conditions__c</fullName>
        <inlineHelpText>Describe any conditions that may make it difficult to connect electric to trailer. For example; trailer requires 110V and 30A RV plug and only 15A is available, a temporary electric pole may be required, electric box is 50 feet away on other side of house</inlineHelpText>
        <label>Connect Electric to Trailer Conditions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost_Benefit_Analysis_Created_Date__c</fullName>
        <label>Cost Benefit Analysis Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <formula>CreatedDate</formula>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Current_Daily_Rate__c</fullName>
        <formula>Opportunity__r.Current_Daily_Rate__c</formula>
        <label>Current Daily Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Care_Specialist_Email__c</fullName>
        <label>Customer Care Specialist Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DWO_Date__c</fullName>
        <description>Date the status changed to DWO</description>
        <label>Lost Opportunity Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DWO_Reason_Code__c</fullName>
        <label>Lost Opportunity Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Cashed out</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Coverage Issue</fullName>
                </value>
                <value>
                    <fullName>Criminal Background/Bad Credit</fullName>
                </value>
                <value>
                    <fullName>Deposit Issue</fullName>
                </value>
                <value>
                    <fullName>Duplicate Request</fullName>
                </value>
                <value>
                    <fullName>No initial contact</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Public Adjuster</fullName>
                </value>
                <value>
                    <fullName>Refused service</fullName>
                </value>
                <value>
                    <fullName>Refused service on initial call</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Daily_Cost__c</fullName>
        <formula>Total_Cost_Formula__c /30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Daily Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Daily_Fees__c</fullName>
        <label>Daily Fees</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Damage_Deposit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Damage Deposit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Damaged_Property_Address__c</fullName>
        <formula>Opportunity__r.Damaged_Property_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Damaged Property Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Damaged_Property_BR__c</fullName>
        <formula>Opportunity__r.Damaged_Property_BR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Damaged Property #BR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Damaged_Property_BTH__c</fullName>
        <formula>Opportunity__r.Damaged_Property_BTH__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Damaged Property #BTH</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Damaged_Property_City__c</fullName>
        <formula>Opportunity__r.Damaged_Property_City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Damaged Property City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Damaged_Property_Country__c</fullName>
        <formula>Text(Opportunity__r.Damaged_Property_Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Damaged Property Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Damaged_Property_Number_of_Addl_Rooms__c</fullName>
        <label>Damaged Property Number of Addl Rooms</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Damaged_Property_Number_of_Offices__c</fullName>
        <label>Damaged Property Number of Offices</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Damaged_Property_SqFt__c</fullName>
        <formula>Opportunity__r.Damaged_Property_Sq_Ft__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Damaged Property SqFt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Damaged_Property_State__c</fullName>
        <formula>Text(Opportunity__r.Damaged_Property_State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Damaged Property State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Damaged_Property_Type__c</fullName>
        <formula>CASE( Opportunity__r.Damaged_Property_Type__c, &quot;House&quot; , &quot;House&quot; , &quot;Mobile Home&quot; , &quot;Mobile Home&quot; , &quot;Travel Trailer&quot; , &quot;Travel Trailer&quot; , &quot;Condo&quot; , &quot;Condo&quot; , &quot;Apartment&quot; , &quot;Apartment&quot; , &quot;Townhouse&quot; , &quot;Townhouse&quot; , &quot;Other&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Damaged Property Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Damaged_Property_Zip__c</fullName>
        <formula>Opportunity__r.Damaged_Property_Zip__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Damaged Property Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Put_On_Hold_Old__c</fullName>
        <label>Date Put On Hold Old</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Put_On_Hold__c</fullName>
        <label>Date Put On Hold</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Loss__c</fullName>
        <formula>Opportunity__r.Date_of_Loss__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of Loss</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_On_Hold__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Days On Hold</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delivery_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delivery Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delivery_Info__c</fullName>
        <inlineHelpText>Describe any conditions that may make it difficult to deliver: rough terrain, ditch in front, need to bulldoze, grade is steep, ground soaked from rain or snow, overhead power lines, telephone pole, utility box, bushes/trees, ditches to cross, fence.</inlineHelpText>
        <label>Delivery Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Deposit_Responsible_Party_Formula__c</fullName>
        <description>Formula to the Deposit Responsible Party field on the claim. Replaces the Deposit Responsible Party field on the service request.</description>
        <formula>CASE(Opportunity__r.Deposit_Responsible_Party__c, &apos;Refundable &amp; Non Refundable&apos;, &apos;Refundable &amp; Non Refundable&apos;, &apos;Refundable Only&apos;, &apos;Refundable Only&apos;, &apos;Non Refundable Only&apos;, &apos;Non Refundable Only&apos;, &apos;Will Not Pay&apos;, &apos;Will Not Pay&apos;, &apos;None&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deposit Responsible Party</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deposit_Responsible_Party__c</fullName>
        <label>Deposit Responsible Party</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Non Refundable Only</fullName>
                </value>
                <value>
                    <fullName>Refundable &amp; Non Refundable</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Refundable Only</fullName>
                </value>
                <value>
                    <fullName>Will Not Pay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Desired_Location__c</fullName>
        <label>Desired Location</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dimensions_Paces__c</fullName>
        <inlineHelpText>(Length x Width) in Paces</inlineHelpText>
        <label>Dimensions-Paces</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimensions_feet__c</fullName>
        <inlineHelpText>(Length x Width) in Feet</inlineHelpText>
        <label>Dimensions-Feet</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dozer_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dozer Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duration_Property_Presented__c</fullName>
        <formula>IF (NOT(ISNULL(First_Property_Presented__c )), (( First_Property_Presented__c  -   Opportunity__r.CreatedDate ) ),99999)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>in Days (Debug field for testing only)</inlineHelpText>
        <label>Duration Property Presented</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration_since_Oppty_Created__c</fullName>
        <formula>IF (NOT(ISNULL(Initial_Call_Date__c)), ((Initial_Call_Date__c -  Opportunity__r.CreatedDate)  * 1440),99999)</formula>
        <inlineHelpText>Debug field used for testing only</inlineHelpText>
        <label>Duration since Oppty Created</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Electric_AC_Hookup_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Electric-AC Hook-up Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Electric_Available__c</fullName>
        <inlineHelpText>Is electric available on-site?</inlineHelpText>
        <label>Electric Available</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Alert_Date_12min__c</fullName>
        <description>12 Min Email Alert Warning Messages</description>
        <formula>CreatedDate+ ((1* 60) +12)/1440</formula>
        <label>Email Alert Date 12min</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email_Alert_Date_15min__c</fullName>
        <description>15 min Email Alert From Service Requested Created Date</description>
        <formula>CreatedDate+ ((1* 60) +15)/1440</formula>
        <label>Email Alert Date 15min</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email_Alert_Date_6Min__c</fullName>
        <description>6 mins Email Check</description>
        <formula>CreatedDate+ ((1* 60) +6)/1440</formula>
        <label>Email Alert Date 6Min</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email_Alert_Date__c</fullName>
        <description>3 min Email Alert From Service Requested Created Date</description>
        <formula>CreatedDate+ ((1* 60) +3)/1440</formula>
        <label>Email Alert Date 3min</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Equipment_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Equipment Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Est_Check_In__c</fullName>
        <formula>Opportunity__r.Estimated_Check_In__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Est. Check-In</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Est_Check_Out__c</fullName>
        <formula>Opportunity__r.Estimated_Check_Out__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Est. Check-Out</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Est_Length_of_Stay_Months__c</fullName>
        <formula>Opportunity__r.Est_Length_of_Stay_Months__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Est. Length of Stay Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_length_of_Stay_Days__c</fullName>
        <formula>Opportunity__r.Est_Length_of_Stay_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Est. length of Stay Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Furniture_Delivery__c</fullName>
        <label>Estimated Furniture Delivery</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Move_In_Date__c</fullName>
        <label>Estimated Move-In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FRV_Type__c</fullName>
        <label>FRV Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>a furnished</fullName>
                </value>
                <value>
                    <fullName>an unfurnished</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>F_H_A_Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <label>F/H/A Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Feet_From_Trailer_Location__c</fullName>
        <inlineHelpText>If Water faucet is available, how many feet from trailer.</inlineHelpText>
        <label>Feet from Trailer Location</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Financial_Amount_1__c</fullName>
        <label>Financial Amount 1</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>First_Property_Presented__c</fullName>
        <label>1st Property Presented</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Furnace_Usage_to_Exceed_48hrs__c</fullName>
        <inlineHelpText>Is occupant going to use furnace for more than 48 hours straight? If Yes, then we recommend you make arrangements with your local propane supplier to have a temporary external propane tank installed.</inlineHelpText>
        <label>Furnace Usage to Exceed 48hrs</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Furniture_Needed__c</fullName>
        <formula>IF (Opportunity__r.Furniture_Needed__c = TRUE, &apos;Yes&apos; , &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Furniture Needed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSA_Signed__c</fullName>
        <label>HSA Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Have_Propane_Tank__c</fullName>
        <inlineHelpText>Does occupant have propane tank on site?</inlineHelpText>
        <label>Have Propane Tank</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>High_Priority_Notes__c</fullName>
        <label>High Priority Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>High_Priority__c</fullName>
        <defaultValue>false</defaultValue>
        <label>High Priority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hold_Follow_Up_Date__c</fullName>
        <label>Hold Follow Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HotelSearch_BookHotel__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking Hotel search and Book hotel Check one the the task are created.</description>
        <label>HotelSearch&amp;BookHotel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hotel_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hotel Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service Requests</relationshipLabel>
        <relationshipName>Service_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hotel_Customer_Care_Specialist_Email__c</fullName>
        <label>Hotel Customer Care Specialist Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Hotel_Stay_Extension__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hotel Stay Extension</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hotel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hotel</label>
        <referenceTo>Hotel_Room__c</referenceTo>
        <relationshipName>Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Housewares_Needed__c</fullName>
        <formula>IF (Opportunity__r.Housewares_Needed__c = TRUE, &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Housewares Needed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Housing_Coordinator_Assigned__c</fullName>
        <formula>Opportunity__r.Housing_Coordinator_Assigned__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Residence Coordinator Assigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Housing_Coordinator_Email__c</fullName>
        <label>Housing Coordinator Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Housing_Coordinator__c</fullName>
        <formula>Opportunity__r.Housing_Coordinator__r.FirstName &amp; &quot; &quot; &amp;  Opportunity__r.Housing_Coordinator__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Housing Coordinator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Call_Date__c</fullName>
        <label>Initial Call Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Initial_Contact_Date__c</fullName>
        <label>Initial Contact Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Initial_SR_being_worked_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Initial SR being worked by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loss_of_Use_Limit__c</fullName>
        <label>Loss of Use Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Make__c</fullName>
        <label>Make</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <label>Manufacturer</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Markup__c</fullName>
        <description>Used for FRV CongaMerge Document.</description>
        <label>Markup</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_Daily_Rate__c</fullName>
        <formula>Opportunity__r.Max_Daily_Rate__c</formula>
        <label>Max Daily Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Migration_PTID__c</fullName>
        <externalId>true</externalId>
        <label>Migration_PTID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Move_In_Confirmation_Created_Date__c</fullName>
        <label>Move In Confirmation Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Need_Hotel_By__c</fullName>
        <formula>Opportunity__r.Need_Hotel_By__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Need Hotel By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Addtl_Rooms__c</fullName>
        <label>Number of Addtl Rooms</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Adults__c</fullName>
        <formula>Opportunity__r.Number_of_Adults__c</formula>
        <label>Number of Adults</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Children__c</fullName>
        <formula>Opportunity__r.Number_of_Children__c</formula>
        <label>Number of Children</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Employees__c</fullName>
        <label>Number of Employees</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Offices__c</fullName>
        <label>Number of Offices</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Pets__c</fullName>
        <formula>Opportunity__r.Number_of_Pets__c</formula>
        <label>Number of Pets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Rooms__c</fullName>
        <formula>Opportunity__r.Number_of_Rooms__c</formula>
        <label>Number of Rooms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Claim</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Service Requests</relationshipLabel>
        <relationshipName>Service_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Paces_from_Trailer__c</fullName>
        <inlineHelpText>If water faucet is available, how many paces from trailer.</inlineHelpText>
        <label>Paces from Trailer</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parking_Garage_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Parking Garage Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pet_Deposit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pet Deposit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pet_Description__c</fullName>
        <formula>Opportunity__r.Pet_Type_and_Breed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pet Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pet_Type_and_Breed__c</fullName>
        <formula>Opportunity__r.Pet_Type_and_Breed__c</formula>
        <label>Pet Type and Breed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pets__c</fullName>
        <formula>Opportunity__r.Number_of_Pets__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Policyholder_to_Pay__c</fullName>
        <label>Bill Policyholder for</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Adjuster_to_Pay__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Deposits and Fees</fullName>
                </value>
                <value>
                    <fullName>Deposits</fullName>
                </value>
                <value>
                    <fullName>Fees</fullName>
                </value>
                <value>
                    <fullName>Will not Pay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_location_and_Surface_Type__c</fullName>
        <inlineHelpText>Describe where trailer will be parked and on what type of surface, for example: on hard-surface driveway, gravel, next to house.</inlineHelpText>
        <label>Primary location and Surface Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Propane_Tank_Feet_from_Trailer_Front__c</fullName>
        <label>Propane Tank Feet from Trailer Front</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Propane_Tank_Paces_from_Trailer_Front__c</fullName>
        <label>Propane Tank Paces from Trailer Front</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>